--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.2.0",
   "description": "A Babel preset let you `import` application configs from **.env** file (zero runtime dependency)",
   "main": "index.js",
-  "scripts": {
-    "test": "cd babel-plugin-dotenv && npm install && npm test"
-  },
   "keywords": [
     "dotenv",
     "react-native"
   ],
   "author": "David Chang",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "dotenv": "^2.0.0"
+  }
 }
